# ultra-ai

./: CONTRIBUTING.md  README.md  colab_setup.py  pyproject.toml  requirements.txt  setup.py  test_model_init.py  train.py
configs/: colab_mini.yaml  stage1_text.yaml  stage2_multimodal.yaml  stage3_full.yaml  training_production.yaml  ultra_nano.yaml  ultra_tiny.yaml
data/: training_manifest.json
data/processed/: data_splits.json  training_manifest.json
data/processed/text/imdb/: imdb_chunk_0.pt  imdb_chunk_1.pt  imdb_metadata.json
data/processed/text/wikitext/: wikitext_chunk_0.pt  wikitext_metadata.json
data/text/imdb/: data.json  metadata.json
data/text/wikitext/: data.json  metadata.json
docs/: api.md  architecture.md  deployment.md  installation.md  training.md
scripts/: deploy.py  download_datasets_fixed.py  download_hf_datasets.py  preprocess_hf_data.py  test_data_simple.py  test_processed_data.py
src/: __init__.py
src/config/: __init__.py  base.yaml
src/models/: __init__.py  ultra_ai_model.py
src/models/attention/: __init__.py  hybrid_attention.py  in_attention.py  linear_attention.py
src/models/mamba/: __init__.py  cuda_kernels.py  mamba2_block.py  mamba2_layer.py  mamba2_model.py
src/models/moe/: __init__.py  expert_layer.py  load_balancing.py  moe_layer.py  optimized_moe.py  routing.py
src/models/multimodal/: __init__.py  audio_encoder.py  image_encoder.py  multimodal_fusion.py  transfusion.py  video_encoder.py
src/training/: __init__.py  data_loader.py  data_quality.py  distributed.py  loss.py  optimizer.py  trainer.py
src/utils/: __init__.py  advanced_generation.py  checkpointing.py  config.py  inference_cache.py  logger.py  memory.py  monitoring.py  quantization.py  smart_checkpointing.py
ultra_ai_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
